--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,35 @@
 <head>
   <meta charset="utf-8">
   <title>PDF-Tools</title>
+  <meta name="description" content="Merge PDF's, Rearange PDF's and remove Pages" />
+  <meta name="keywords" content="PDF, Edit PDF, Merge PDF, Sort PDF"/>
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="PDF-Tools" />
+  <meta property="og:title" content="PDF-Tools" />
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#4c8080" />
+  <meta name="msapplication-TileColor" content="#4c8080" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root class="mat-app-background">
+    <div class="initial-loader">
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      Loading...
+    </div>
+  </app-root>
 </body>
 </html>
