--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title>PDF-Tools</title>
-  <meta name="description" content="Merge PDF's, Rearange PDF's and remove Pages" />
+  <meta name="description" content="Merge PDF's, Rearange PDF's and remove Pages"/>
   <meta name="keywords" content="PDF, Edit PDF, Merge PDF, Sort PDF"/>
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="PDF-Tools" />
-  <meta property="og:title" content="PDF-Tools" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:site_name" content="PDF-Tools"/>
+  <meta property="og:title" content="PDF-Tools"/>
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="theme-color" content="#4c8080" />
-  <meta name="msapplication-TileColor" content="#4c8080" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="mobile-web-app-capable" content="yes"/>
+  <meta name="theme-color" content="#4c8080"/>
+  <meta name="msapplication-TileColor" content="#4c8080"/>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="assets/pdf.svg">
 </head>
 <body class="mat-typography">
   <app-root class="mat-app-background">
@@ -30,5 +31,6 @@
       Loading...
     </div>
   </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
