--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>PDF-Tools</title>
   <meta name="description" content="Merge PDF's, Rearange PDF's and remove Pages"/>
   <meta name="keywords" content="PDF, Edit PDF, Merge PDF, Sort PDF"/>
@@ -9,15 +9,16 @@
   <meta property="og:site_name" content="PDF-Tools"/>
   <meta property="og:title" content="PDF-Tools"/>
 
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="mobile-web-app-capable" content="yes"/>
-  <meta name="theme-color" content="#4c8080"/>
-  <meta name="msapplication-TileColor" content="#4c8080"/>
+  <meta name="theme-color" content="#3f51b5"/>
+  <meta name="msapplication-TileColor" content="#3f51b5"/>
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/svg+xml" href="assets/pdf.svg">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" type="image/svg+xml" href="assets/pdf.svg"/>
+  <link rel="manifest" href="manifest.webmanifest"/>
 </head>
 <body class="mat-typography">
   <app-root class="mat-app-background">
